# tokenwise

./: .gitignore  LICENSE  README.md  report.md
benchmark_deep/: BENCHMARK_HAIKU_vs_OPUS.md  BENCHMARK_RESULTS.md  BENCHMARK_V2_REPLICATION.md
benchmark_deep/agent_noskill/: RESULT.md  main.py  pyproject.toml  test_api.py
benchmark_deep/agent_noskill_haiku/: RESULT.md  main.py  pyproject.toml  test_api.py
benchmark_deep/agent_noskill_haiku_v2/: RESULT.md  SPEC.md  main.py  test_main.py
benchmark_deep/agent_noskill_v2/: RESULT.md  main.py  test_api.py
benchmark_deep/agent_skill/: RESULT.md  main.py  pyproject.toml  test_main.py
benchmark_deep/agent_skill_haiku/: RESULT.md  main.py  pyproject.toml  test_main.py
benchmark_deep/agent_skill_haiku_v2/: NOTES.md  RESULT.md  main.py  test_main.py
benchmark_deep/agent_skill_v2/: NOTES.md  RESULT.md  conftest.py  main.py  test_api.py
benchmark_deep/judge/: test_contract.py
benchmark_exp/: TASK.md
benchmark_exp/agent_noskill/: RESULT.md  expense_tracker.py  pyproject.toml  test_expense_tracker.py
benchmark_exp/agent_skill/: RESULT.md  expense_tracker.py  pyproject.toml  test_expense_tracker.py
benchmark_heavy/: BENCHMARK_COST_RESULTS.md  BENCHMARK_HEAVY_RESULTS.md  BENCHMARK_PIPELINE.md  BENCHMARK_RIGOR.md  SPEC_VAGUE.md  judge_orders.py  pipe_SPEC_CLEAR.md
benchmark_heavy/agent_heavy_noskill/: RESULT.md
benchmark_heavy/agent_heavy_skill/: RESULT.md
benchmark_heavy/pipe_worker/: pyproject.toml
benchmark_heavy/tw_on/: SPEC_FEATURE.md
benchmark_route/: BENCHMARK_ROUTE.md  ctx_QUESTIONS.md  judge_lru.py  judge_qs.js  judge_sql.py  lru_SPEC.md  qs_SPEC.md  sql_SPEC.md
benchmark_route/ctx_haiku/: ANSWERS.md
benchmark_route/ctx_opus/: ANSWERS.md
benchmark_route/lru_haiku/: lru.py
benchmark_route/lru_opus/: lru.py
benchmark_route/qs_haiku/: qs.js
benchmark_route/qs_opus/: qs.js
tokenwise/: README.md  RULES.template.md  report.md
(+130 files in other folders)
