[project]
name = "inventory-order-api"
version = "0.1.0"
description = "Envanter & Sipariş Yönetim REST API (FastAPI + sqlite3)"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "httpx",
]

[project.optional-dependencies]
test = ["pytest"]

[tool.pytest.ini_options]
testpaths = ["."]
python_files = ["test_*.py"]
