[project]
name = "inventory-order-api"
version = "0.1.0"
description = "Inventory & Order management REST API (FastAPI + sqlite3)"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "httpx",
]

[project.optional-dependencies]
test = ["pytest", "pytest-cov"]

[tool.pytest.ini_options]
addopts = "-v"
testpaths = ["."]
