[project]
name = "inventory-api"
version = "0.1.0"
description = "Inventory & Order Management REST API"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.95.0",
    "httpx>=0.23.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[tool.pytest.ini_options]
testpaths = ["."]
python_files = "test_*.py"
